--- a/lessons.html
+++ b/lessons.html
@@ -19,7 +19,8 @@
   <script defer src="https://saro.website/assets/js/cookie.js"></script>
   <script data-ad-client="ca-pub-5704095251892500" defer
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <link rel="stylesheet" href="./assets/style/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="./assets/style/css/style.css">
   <title>Welcome to SARO - Lessons</title>
 </head>
 <body>
@@ -716,17 +717,17 @@
                   <td>it is needed to soften the sound which comes directly before by adding i or y; </td>
                 </tr>
               </table>
-              <p><
+              <p>
               NOTICE : instead of endings -szy and sometimes <span lang="pl"> -ży </span>( not -rzy), phonetically softened -si, -zi can
               appeared. For example: <br> <br>
-              <span lang="pl"></span>ten wyższy – ci wyżsi </span><br>
-              <span lang="pl"></span>ten głuchy – ci głusi </span><br>
-              <span lang="pl"></span>ten duży – ci duzi </span><br>
+              <span lang="pl"></span>ten wyższy <i class="fas fa-arrow-right"></i> ci wyżsi </span><br>
+              <span lang="pl"></span>ten głuchy <i class="fas fa-arrow-right"></i> ci głusi </span><br>
+              <span lang="pl"></span>ten duży <i class="fas fa-arrow-right"></i> ci duzi </span><br>
               <br>
               *but: <br>
-              <span lang="pl">en boży – ci boży</span> <br>
-              ten stary – ci starzy <br>
-              ten kurzy – ci kurzy <br>
+              <span lang="pl">en boży <i class="fas fa-arrow-right"></i> ci boży</span> <br>
+              ten stary <i class="fas fa-arrow-right"></i> ci starzy <br>
+              ten kurzy <i class="fas fa-arrow-right"></i> ci kurzy <br>
               <br>
               Here you analyze some softened forms of endings on the example of masculine Nominative in the singular:
               </p>
@@ -735,81 +736,81 @@
                 <td colspan="2" style="background-color: #ADC5DF;"><i>y</i> becomes <i>i</i></td>
               </tr>
               <tr>
-                <td lang="pl">by bi</td>
-                <td lang="pl">gruby grubi</td>
+                <td lang="pl">by <i class="fas fa-arrow-right"></i> bi</td>
+                <td lang="pl">gruby <i class="fas fa-arrow-right"></i> grubi</td>
               </tr>
               <tr>
-                <td lang="pl">my mi</td>
+                <td lang="pl">my <i class="fas fa-arrow-right"></i> mi</td>
                 <td lang="pl"></td>
               </tr>
               <tr>
-                <td lang="pl">ny ni</td>
-                <td lang="pl">kochany kochani</td>
+                <td lang="pl">ny <i class="fas fa-arrow-right"></i> ni</td>
+                <td lang="pl">kochany <i class="fas fa-arrow-right"></i> kochani</td>
               </tr>
               <tr>
-                <td lang="pl">wy wi</td>
-                <td lang="pl">szczęśliwy szczęśliwi</td>
+                <td lang="pl">wy <i class="fas fa-arrow-right"></i> wi</td>
+                <td lang="pl">szczęśliwy <i class="fas fa-arrow-right"></i> szczęśliwi</td>
               </tr>
               <tr>
                 <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> stays</td>
               </tr>
               <tr>
-                <td lang="pl">ry rzy</td>
-                <td lang="pl">ponury ponurzy</td>
+                <td lang="pl">ry <i class="fas fa-arrow-right"></i> rzy</td>
+                <td lang="pl">ponury <i class="fas fa-arrow-right"></i> ponurzy</td>
               </tr>
               <tr>
                 <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>y</i> becomes <i>i</i>
                 </td>
               </tr>
               <tr>
-                <td lang="pl">ł li</td>
-                <td lang="pl">wesół weseli</td>
+                <td lang="pl">ł <i class="fas fa-arrow-right"></i> li</td>
+                <td lang="pl">wesół <i class="fas fa-arrow-right"></i> weseli</td>
               </tr>
               <tr>
-                <td lang="pl">szy si</td>
+                <td lang="pl">szy <i class="fas fa-arrow-right"></i> si</td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td>chy si</td>
-                  <td>cichy cisi</td>
+                  <td>chy <i class="fas fa-arrow-right"></i> si</td>
+                  <td>cichy <i class="fas fa-arrow-right"></i> cisi</td>
                 </tr>
                 <tr>
-                  <td>ży (sometimes) zi</td>
+                  <td>ży (sometimes) <i class="fas fa-arrow-right"></i> zi</td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td>ty ci</td>
-                  <td>otwarty otwarci</td>
+                  <td>ty <i class="fas fa-arrow-right"></i> ci</td>
+                  <td>otwarty <i class="fas fa-arrow-right"></i> otwarci</td>
                 </tr>
                 <tr>
-                  <td>sty ści</td>
-                  <td>wyrazisty wyraziści</td>
+                  <td>sty <i class="fas fa-arrow-right"></i> ści</td>
+                  <td>wyrazisty <i class="fas fa-arrow-right"></i> wyraziści</td>
                 </tr>
                 <tr>
                   <td colspan="2" style="background-color: #ADC5DF;">change of the consonant, <i>i</i> becomes <i>y</i>
                   </td>
                 </tr>
                 <tr>
-                  <td>ki cy</td>
-                  <td>głęboki głębocy</td>
+                  <td>ki <i class="fas fa-arrow-right"></i> cy</td>
+                  <td>głęboki <i class="fas fa-arrow-right"></i> głębocy</td>
                 </tr>
                 <tr>
-                  <td>gi dzy</td>
-                  <td>długi dłudzy</td>
+                  <td>gi <i class="fas fa-arrow-right"></i> dzy</td>
+                  <td>długi <i class="fas fa-arrow-right"></i> dłudzy</td>
                 </tr>
                 <tr>
                   <td colspan="2">with no changes, with i</td>
                 </tr>
                 <tr>
-                  <td>pi pi</td>
-                  <td>głupi głupi</td>
+                  <td>pi <i class="fas fa-arrow-right"></i> pi</td>
+                  <td>głupi <i class="fas fa-arrow-right"></i> głupi</td>
                 </tr>
                 <tr>
-                  <td>si si</td>
+                  <td>si <i class="fas fa-arrow-right"></i> si</td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td>wi wi</td>
+                  <td>wi <i class="fas fa-arrow-right"></i> wi</td>
                   <td></td>
                 </tr>
                 <tr>
@@ -817,19 +818,19 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>rzy rzy</td>
+                  <td>rzy <i class="fas fa-arrow-right"></i> rzy</td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td>ży (sometimes) ży</td>
-                  <td>chyży chyży</td>
+                  <td>ży <i class="fas fa-arrow-right"></i> (sometimes) ży</td>
+                  <td>chyży <i class="fas fa-arrow-right"></i> chyży</td>
                 </tr>
               </table>
               <p>
               NOTICE : the are some phrases in which an adjective appears <u>after</u> a noun. <br>
-              duże państwo, potężne państwo państwo polskie <br>
-              czarny kot, pogodny kot kot domowy <br>
-              wieloletnia wojna, druga wojna wojna domowa
+              duże państwo, potężne państwo <i class="fas fa-arrow-right"></i> państwo polskie <br>
+              czarny kot, pogodny kot <i class="fas fa-arrow-right"></i> kot domowy <br>
+              wieloletnia wojna, druga <i class="fas fa-arrow-right"></i> wojna wojna domowa
             </p>
             <div class="sign">
               <p class="sign--person">written by</p>
@@ -872,8 +873,8 @@
               </p>
 
               <ul class="noun-gender">
-                <li>masculine (rodzaj męski)</li>
-                <li>feminine (rodzaj żeński)</li>
+                <li>masculine <span lang="pl">(rodzaj męski)</span></li>
+                <li>feminine <span lang="pl">(rodzaj żeński)</span></li>
                 <li>neuter (rodzaj nijaki) </li>
                 </ul>
               <p>
