--- a/jp/about.html
+++ b/jp/about.html
@@ -101,6 +101,23 @@
                 </div>
               </div>
             </div>
+            <h3></h3>
+            <div class="row">
+              <div class="column">
+                  <div class="card">
+                      <img src="./assets/img/saro/team7.jpg" alt="Anna" style="width:100%">
+                      <div class="container__card">
+                          <h2>アンナ</h2>
+                          <p class="title">先生/フロントエンドサポート</p>
+                          <p>将来の夢はフロントエンドデベロッパーになる事で、元気で明るいのが取り柄です。
+                            ポーランドの習慣、迷信、ことわざについて教えてくれます。趣味はヨガ、
+                            部屋のデコレーション、オンラインショッピングで、英語と日本語が話せます。
+                          </p>
+                          <button class="button__black">Contact</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <h3>先生</h3>
             <div class="row">
               <div class="column">
