--- a/jp/stuff/media.html
+++ b/jp/stuff/media.html
@@ -228,6 +228,35 @@
                                 <a href="../about.html" target="_blank">@ロバート</a>
                             </div>
                         </div>
+                        <button class="buttonSeries">ポーランドのTV番組</button>
+                        <div class="panel">
+                            <h2>ポーランドのTV番組</h2>
+                            <h3>O mnie się nie martw (オ ムニエ シェン ニエ マルトゥヴ)</h3>
+                            <iframe class="YouTube"
+                                src="https://www.youtube.com/embed/QQAndkvxf90" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                                <p>O mnie się nie martw ［直訳:私の事は気にしないで］はコメディのドラマシリーズです。監督はMichał Rogalski(ミハウ・ロガルスキー)で、Joanna Kulig(ヨアンナ・クリグ)、Stefan Pawłowski(ステファン・パヴウォヴスキー)、Paweł Domagała(パヴェウ・ドマガウァ)が出演しています。このドラマでは、日常生活で起こっている様々な問題を面白く描いています。とても見やすい内容なので、オススメです。 <a href="https://www.netflix.com/title/81307762">Netflixでチェック！</a></p>
+                                <h3>Pitbull</h3>
+                                <iframe class="YouTube"
+                                src="https://www.youtube.com/embed/mAXrgimdGTM" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                                <p>Pitbull は犯罪サスペンスシリーズのドラマです。監督はPatryk Vega(パトリク・ヴェガ)で、Marcin Dorociński(マルチン・ドロチンスキー)、Andrzej Grabowski(アンジェイ・グラボヴスキー)、Paweł Królikowski(パヴェウ・クルリコヴスキー)、Roma Gąsiorowska(ロマ・ゴシオロヴスカ)が出演しています。内容は、凶悪犯罪を扱う部門で刑事として働く男性の、ワルシャワでの私生活や仕事についてを描いたものです。
+                                </p>
+                                <h3>ROJST(ロイストゥ)</h3>
+                                 <iframe class="YouTube"
+                                src="https://www.youtube.com/embed/tfKPPAqZNAU" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                 allowfullscreen></iframe>
+                                 <p>Rojst (ロイストゥ)［英題: The Mire］は犯罪サスペンスシリーズのドラマです。監督はJan Holoubek(ヤン・ホロウベク)で、Dawid Ogrodnik(ダビドゥ・オグロドゥニク)、Andrzej Seweryn(アンジェイ・セヴェリン)、Zofia Wichłacz(ゾフィア・ヴィフワチ)が出演しています。陰鬱な時代であった、1980年代のポーランド西部のある町が舞台となっています。” Rojst “ とは「困難な状況、苦境」という意味で、このドラマの中の世界観を比喩した表現だそうです。
+                                 <a href="https://www.netflix.com/title/81221644">Netflixでチェック！</a></p>
+                                  <div class="sign">
+                                <p class="sign--person">作成者:</p>
+                                <a href="../about.html" target="_blank">@アンナ</a>
+                            </div>
+                        </div>
+                        </div>
                         <button class="buttonGames">ポーランドのゲーム</button>
                         <div class="panel">
                             <h2>ポーランドのゲーム</h2>
