japanese about updated

--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                                 <div class="card">
                                     <img src="./assets/img/saro/team9.jpg" alt="Magda" style="width:100%">
                                     <div class="container__card">
-                                        <h2>Magda</h2>
+                                        <h2>Lena</h2>
                                         <p class="title">Teacher</p>
                                         <p>Perpetual student and currently a Korean teacher. Speaks Polish, English,
                                             Korean. Knows German and Japanese a little. Passionate about phonetics,
