--- a/jp/about.html
+++ b/jp/about.html
@@ -101,11 +101,11 @@
                 </div>
               </div>
             </div>
-            <h3></h3>
+            <h3>ウェブ開発者</h3>
             <div class="row">
               <div class="column">
                   <div class="card">
-                      <img src="./assets/img/saro/team7.jpg" alt="Anna" style="width:100%">
+                      <img src="./../assets/img/saro/team7.jpg" alt="Anna" style="width:100%">
                       <div class="container__card">
                           <h2>アンナ</h2>
                           <p class="title">先生/フロントエンドサポート</p>
@@ -113,7 +113,7 @@
                             ポーランドの習慣、迷信、ことわざについて教えてくれます。趣味はヨガ、
                             部屋のデコレーション、オンラインショッピングで、英語と日本語が話せます。
                           </p>
-                          <button class="button__black">Contact</button>
+                          <button class="button__black">お問い合わせ</button>
                       </div>
                   </div>
               </div>
@@ -121,6 +121,33 @@
             <h3>先生</h3>
             <div class="row">
               <div class="column">
+                <div class="card">
+                  <img src="./../assets/img/saro/team9.jpg" alt="Magda" style="width:100%">
+                  <div class="container__card">
+                      <h2>レナ</h2>
+                      <p class="title">先生</p>
+                      <p>学生で、現在は韓国語の教師もしています。 ポーランド語、英語、韓国語を話すことができ、
+                        ドイツ語と日本語も少し分かります。 音声学にとても興味をもっており、文法も好きです。 好きなものは音楽です。
+                        SAROでポーランド語をを教える側に立ち、改めてポーランド語について理解を深めていきたいと考えています。</p>
+                      <button class="button__black">お問い合わせ</button>
+                  </div>
+              </div>
+          </div>
+          <div class="column">
+            <div class="card">
+                <img src="./../assets/img/saro/team8.jpg" alt="Martyna" style="width:100%">
+                <div class="container__card">
+                    <h2>マルティナ</h2>
+                    <p class="title">先生</p>
+                    <p> 私は大学の中国語専攻を卒業していて、言語についてとても興味があります。
+                      普段は新しい音楽を見つけたり、ノンフィクションのポッドキャストを聴いたり、
+                      本を読んで過ごすことが好きです。このサイトを通じてポーランド語
+                      についての知識をシェアし、皆さんに教えられる事を楽しんでいこうと思います😊</p>
+                    <button class="button__black">お問い合わせ</button>
+                </div>
+            </div>
+        </div>
+        <div class="column">
                 <div class="card">
                   <img src="./../assets/img/saro/team3.jpg" alt="Justyna" style="width:100%">
                   <div class="container__card">
