jp traditions updated

--- a/lessons.html
+++ b/lessons.html
@@ -846,7 +846,7 @@
             </p>
             <div class="sign">
               <p class="sign--person">written by</p>
-              <a href="about.html" target="_blank">@Magda</a>
+              <a href="about.html" target="_blank">@Lena</a>
             </div>
           </div>
           <button class="lesson lesson--nounGender">Noun grammatical gender
