--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -66,9 +66,9 @@
                                 class="author">@アンナ</a></p><br>
                         <div class="container__trad container__trad--item">
                             <div class="container__trad">
-                                <img src="./../assets/img/articles/traditions/24.10.2020/wszystkichswietych2.jpg"
+                                <img src="./../../assets/img/articles/traditions/24.10.2020/wszystkichswietych2.jpg"
                                     alt="Candles on the grave on the All Saint's Day" class="image-right__center">
-                                <img src="./../assets/img/articles/traditions/24.10.2020/wszystkich-swietych1.jpg"
+                                <img src="./../../assets/img/articles/traditions/24.10.2020/wszystkich-swietych1.jpg"
                                     alt="Cemetery on All Saint's Day" class="image-left__center">
                                 <p>ポーランド人の80％以上がキリスト教徒です。 そのため、11月1日の諸聖人の祝日(All Saint's Day)
                                     には、亡くなった親戚のお墓を訪ねる人々で道路が埋め尽くされ、
@@ -77,7 +77,7 @@
                                     <span class="dots">(...)</span>
                                 </p>
                                 <div class="more">
-                                    <img src="./../assets/img/articles/traditions/24.10.2020/wszystkich-swietych3.jpg"
+                                    <img src="./../../assets/img/articles/traditions/24.10.2020/wszystkich-swietych3.jpg"
                                         alt="Cemetery on All Saint's Day" class="image-right__center">
                                     <p>これは、祈りがすべての魂に向けられる11月2日の万霊祭に強く関連しています。
                                         万霊祭では、教会や墓地、そしてお祈りのための5つのポイントの周りに行列ができ、
