--- a/stuff/dialogue.html
+++ b/stuff/dialogue.html
@@ -292,7 +292,6 @@
                                 <p class="sign--person">written by</p>
                                 <a href="../about.html" target="_blank">@Justyna</a>
                             </div>
-
                         </div>
                         <button class="dialogue dialogue-grocery__shoping">Grocery shopping</button>
                         <div class="panel">
@@ -301,10 +300,8 @@
                                 stores there’s no self-service and you have to convey what do you want to buy to the
                                 shopkeeper. There’s a dialogue, some vocabulary and a short exercise you should have no
                                 problem with after this lesson. Also you should recognize some vocabulary from the
-                                previous lessons. </p><br> <br>
-                            <div class="content--dial">
-                                <div class="content--dial--item">
-                                    <p>
+                                previous lessons. <br><br>
+
                                         Klient: Dzień dobry! <br>
                                         Sprzedawca: Dzień dobry! Co podać? <br>
                                         Klient: Proszę makaron penne i tuńczyka. <br>
@@ -319,10 +316,8 @@
                                         Sprzedawca: Czy drukować potwierdzenie?<br>
                                         Klient: Nie, dziękuję. Do widzenia.<br>
                                         Sprzedawca: Dziękuję. Do widzenia.<br>
-                                    </p>
-                                </div>
-                                <div class="content--dial--item">
-                                    <p>klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
+                                    <br>
+                                    klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
                                         spʂɛdaft͡sa: d͡ʑɛɲ dɔbrɨ! t͡sɔ pɔdat͡ɕ?<br>
                                         klʲɛnt: prɔʂɛ̃w̃ makarɔn pɛnnɛ i tuɲʈ͡ʂɨka <br>
                                         spʂɛdaft͡sa: ilɛ? <br>
@@ -335,11 +330,7 @@
                                         klʲɛnt: zapwat͡sɛ̃w̃ kartɔ̃w̃. <br>
                                         spʂɛdaft͡sa: ʈ͡ʂɨ drukɔvat͡ɕ pɔtfʲɛrd͡zɛɲɛ?<br>
                                         klʲɛnt: ɲɛ, d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
-                                        spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
-                                    </p>
-                                </div>
-                            </div>
-                            <p>
+                                        spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br><br>
                                 Customer: Good morning! <br>
                                 Shopkeeper: Good morning! How can I help you? <br>
                                 Customer: I would like penne pasta and some tuna. <br>
@@ -416,8 +407,11 @@
                                 cytryna (t͡sɨtrɨna) - lemon <br>
                                 imbir (ʲimbʲir) - ginger <br>
                                 miód (mʲut) - honey
-
                             </p>
+                        </div>
+                        <div class="sign">
+                            <p class="sign--person">written by</p>
+                            <a href="../about.html" target="_blank">@Anna</a>
                         </div>
                     </div>
                     <div class="reportButton">
