--- a/jp/stuff/dialogue.html
+++ b/jp/stuff/dialogue.html
@@ -415,6 +415,126 @@
                                     <a href="../about.html" target="_blank">@ロバート</a>
                             </div>
                         </div>
+                        <button class="dialogue dialogue-grocery__shoping">スーパーマーケットにて</button>
+                        <div class="panel">
+                            <h2>スーパーマーケットにて</h2>
+                            <p>このレッスンでは、皆さんをスーパーマーケットへとお連れします♩多くのお店ではセルフサービスがなく、何を買いたいかを店主に伝えなくてはなりません。このレッスンで簡単な会話文、単語、演習問題をマスターし、ぜひ実践に生かしてみて下さい(^^) また、前回のレッスンで単語などを復習しておくとより理解が深まります。<br> <br>
+                                        Klient: Dzień dobry! <br>
+                                        Sprzedawca: Dzień dobry! Co podać? <br>
+                                        Klient: Proszę makaron penne i tuńczyka. <br>
+                                        Sprzedawca: Ile? <br>
+                                        Klient: Paczkę makaronu i dwie puszki tuńczyka.<br>
+                                        Sprzedawca: Proszę. I co jeszcze?<br>
+                                        Klient: Proszę jeszcze cebulę i śmietanę kremówkę.<br>
+                                        Sprzedawca: Proszę. To wszystko?<br>
+                                        Klient: Tak, dziękuję. Ile płacę?<br>
+                                        Sprzedawca: Czternaście siedemdziesiąt. Kartą czy gotówką?<br>
+                                        Klient: Zapłacę kartą.<br>
+                                        Sprzedawca: Czy drukować potwierdzenie?<br>
+                                        Klient: Nie, dziękuję. Do widzenia.<br>
+                                        Sprzedawca: Dziękuję. Do widzenia.
+                                        <br> <br>
+                                        《発音とアクセント》<br><br>
+                                        <span lang="pl">klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
+                                        spʂɛdaft͡sa: d͡ʑɛɲ dɔbrɨ! t͡sɔ pɔdat͡ɕ?<br>
+                                        klʲɛnt: prɔʂɛ̃w̃ makarɔn pɛnnɛ i tuɲʈ͡ʂɨka <br>
+                                        spʂɛdaft͡sa: ilɛ? <br>
+                                        klʲɛnt: paʈ͡ʂkɛ̃w̃ makarɔnu i dvʲɛ puʂkʲi tuɲʈ͡ʂɨka. <br>
+                                        spʂɛdaft͡sa: prɔʂɛ̃w̃. i t͡sɔ jɛʂʈ͡ʂɛ?<br>
+                                        klʲɛnt: prɔʂɛ̃w̃ jɛʂʈ͡ʂɛ t͡sɛbulɛ̃w̃ i ɕmʲɛtanɛ̃w̃ krɛmufkɛ̃w̃.<br>
+                                        spʂɛdaft͡sa: prɔʂɛ̃w̃. tɔ fʂɨstkɔ?<br>
+                                        klʲɛnt: tak, d͡ʑʲɛŋkujɛ̃w̃. ilɛ pwat͡sɛ̃w̃?<br>
+                                        spʂɛdaft͡sa: ʈ͡ʂtɛrnaɕt͡ɕɛ ɕɛdɛmd͡ʑɛɕɔnt. kartɔ̃w̃ ʈ͡ʂɨ gɔtufkɔ̃w̃?<br>
+                                        klʲɛnt: zapwat͡sɛ̃w̃ kartɔ̃w̃. <br>
+                                        spʂɛdaft͡sa: ʈ͡ʂɨ drukɔvat͡ɕ pɔtfʲɛrd͡zɛɲɛ?<br>
+                                        klʲɛnt: ɲɛ, d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
+                                        spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.</span><br> <br>
+                                《訳》<br><br>
+
+                                客 : こんにちは。<br>
+                                店員 : こんにちは。何をお探しですか？ <br>
+                                客 : ペンネとツナを買いたいのですが。<br>
+                                店員 : おいくつご入用ですか？ <br>
+                                客 : ペンネを1袋と、ツナ缶を2つ下さい。 <br>
+                                店員 : こちらになります。他には何かございますか？ <br>
+                                客 : 玉ねぎとヘビークリームも下さい。<br>
+                                店員 : かしこまりました。以上でよろしいですか？ <br>
+                                客 : はい、ありがとうございます。いくらですか？ <br>
+                                店員 : 14,70です。現金とカードどちらでお支払いされますか？ <br>
+                                客 : カードで支払います。<br>
+                                店員 : レシートはご入用ですか？ <br>
+                                客 : 結構です、ありがとうございます。さようなら。<br>
+                                店員 : さようなら。<br>                           
+                                <br>
+
+                                この会話文で使った新しい表現を復習してみましょう。
+                                <br>
+
+                                <ruby>forma płatności <rp>(</rp><rt>fɔrma pwatnɔɕt͡ɕi</rt><rp>)</rp></ruby> - 支払方法 :
+                                gotówka - 現金<br>
+                                zapłacę gotówką - 現金で支払います。 <br>
+                                karta - カード <br>
+                                zapłacę kartą - カードで支払います。 <br>
+                                <br>
+                                <ruby>artykuły spożywcze <rp>(</rp><rt>artɨkuwɨ spɔʐɨfʈ͡ʂɛ</rt><rp>)</rp></ruby> - 食品: <br>
+                                makaron - パスタ <br>
+                                tuńczyk - ツナ <br>
+                                śmietana - クリーム <br>
+                                śmietanka kremówka - ヘビークリーム <br>
+                                cebula - 玉ねぎ <br>
+                                さあ、これでツナパスタを作る準備は完了です！が、その前にもう一つ重要な「ものの数え方」についてご紹介します。<br>
+                            </p>
+
+                            <img src="./../../assets/img/articles/dialogues/pojemniki.png" alt="Types of containers"
+                                class="image-center__center">
+
+                            <b style="display: block; text-align: center;"> 次に可算名詞(画像左)・不可算名詞(画像右)の例をご紹介します。</b>
+
+                            <img src="./../../assets/img/articles/dialogues/policzalneiniepoliczalne.png"
+                                alt="Countable and uncountable foods" class="image-center__center">
+
+                            <p lang="pl">
+                                最後に、買い物に役立つ食品をお教えします: <br> <br>
+                                <ruby>grejpfrut <rp>(</rp><rt>grɛjpfrut</rt> <rp>)</rp></ruby> - グレープフルーツ<br>
+                                <ruby>ciastka <rp>(</rp><rt>t͡ɕastka</rt> <rp>)</rp></ruby> - クッキー <br>
+                                <ruby>jogurt <rp>(</rp><rt>jɔgurt</rt> <rp>)</rp></ruby> - ヨーグルト<br>
+                                <ruby>papryka <rp>(</rp><rt>paprɨka</rt> <rp>)</rp></ruby> - パプリカ／ピーマン<br>
+                                <ruby>pomidor <rp>(</rp><rt>pɔmʲidɔr</rt> <rp>)</rp></ruby> - トマト <br>
+                                <ruby>filet z kurczaka <rp>(</rp><rt>fʲilɛt s kurʈ͡ʂaka</rt> <rp>)</rp></ruby> - 鶏肉の切り身<br>
+                                <ruby>pierś z kurczaka <rp>(</rp><rt>pʲɛrɕ s kurʈ͡ʂaka</rt> <rp>)</rp></ruby> - 鶏むね肉 <br>
+                                <ruby>szynka <rp>(</rp><rt>ʂɨnka</rt> <rp>)</rp></ruby> - ハム <br>
+                                <ruby>kiełbasa <rp>(</rp><rt>kʲɛwbasa</rt> <rp>)</rp></ruby> - ソーセージ <br>
+                                <ruby>ser <rp>(</rp><rt>sɛr</rt> <rp>)</rp></ruby> - チーズ<br>
+                                <ruby>sok <rp>(</rp><rt>sɔk</rt> <rp>)</rp></ruby> - ジュース<br>
+                                <ruby>woda gazowana <rp>(</rp><rt>vɔda gazɔvana</rt> <rp>)</rp></ruby> - 炭酸水 <br>
+                                <ruby>woda niegazowana <rp>(</rp><rt>vɔda ɲɛgazɔvana</rt> <rp>)</rp></ruby> - 飲料水 <br>
+                                <ruby>lody <rp>(</rp><rt>lɔdɨ</rt> <rp>)</rp></ruby> - アイスクリーム <br>
+                                <ruby>mleko  <rp>(</rp><rt>mlɛkɔ</rt> <rp>)</rp></ruby> - 牛乳 <br>
+                                <ruby>mleczko kokosowe <rp>(</rp><rt>mlɛʈ͡ʂkɔ kɔkɔsɔvɛ</rt> <rp>)</rp></ruby> - ココナッツミルク <br>
+                                <ruby>płatki śniadaniowe <rp>(</rp><rt>pwatkʲi ɕɲadaɲɔvɛ</rt> <rp>)</rp></ruby> - シリアル <br>
+                                <ruby>płatki owsiane <rp>(</rp><rt>pwatkʲi ɔfɕanɛ</rt> <rp>)</rp></ruby> - オートミール <br>
+                                <ruby>orzechy włoskie <rp>(</rp><rt>vɔʐɛxɨ vwɔskʲɛ</rt> <rp>)</rp></ruby> - クルミ <br>
+                                <ruby>mrożone brokuły <rp>(</rp><rt>mrɔʐɔnɛ brɔkuwɨ</rt> <rp>)</rp></ruby> - 冷凍ブロッコリー <br>
+                                <ruby>chusteczki higieniczne <rp>(</rp><rt>xustɛʈ͡ʂkʲi hʲigʲɛɲiʈ͡ʂnɛ</rt> <rp>)</rp></ruby> - ティッシュ <br>
+                                <ruby>papier toaletowy <rp>(</rp><rt>apʲɛr tɔalɛtɔvɨ</rt> <rp>)</rp></ruby> - トイレットペーパー <br>
+                                <ruby>boczek <rp>(</rp><rt>bɔʈ͡ʂɛk</rt> <rp>)</rp></ruby> - ベーコン <br>
+                                <ruby>winogrona <rp>(</rp><rt>vʲinɔgrɔna</rt> <rp>)</rp></ruby> - ブドウ <br>
+                                <ruby>majonez <rp>(</rp><rt>majɔnɛs</rt> <rp>)</rp></ruby> - マヨネーズ <br>
+                                <ruby>keczup <rp>(</rp><rt>kɛʈ͡ʂup</rt> <rp>)</rp></ruby> - ケチャップ <br>
+                                <ruby>sałata <rp>(</rp><rt>sawata</rt> <rp>)</rp></ruby> - レタス <br>
+                                <ruby>cytryna <rp>(</rp><rt>t͡sɨtrɨna</rt> <rp>)</rp></ruby> - レモン <br>
+                                <ruby>imbir <rp>(</rp><rt>ʲimbʲir</rt> <rp>)</rp></ruby> - 生姜 <br>
+                                <ruby>miód <rp>(</rp><rt>mʲut</rt><rp>)</rp> <ruby></ruby> - はちみつ <ruby>
+
+                            </p>
+                        </div>
+                        <div class="sign">
+                            <p class="sign--person">作成者:</span>
+                                <a href="../about.html" target="_blank">@アンナ</a>
+                            <p class="sign--person">翻訳者:</span>
+                                <a href="../about.html" target="_blank">@沙季</a>
+                        </div>
+                    </div>
                         <div class="reportButton">
                             <button class="report" onclick="report()">レポート</button>
                         </div>
