--- a/jp/index.html
+++ b/jp/index.html
@@ -5,8 +5,13 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175962314-1"></script>
     <script>
-        window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments) }
-        gtag('js', new Date()); gtag('config', 'UA-175962314-1')
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments)
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-175962314-1')
     </script>
     <meta charset="UTF-8">
     <meta name="description"
@@ -24,7 +29,7 @@
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <link rel="stylesheet" href="./../assets/style/css/style.css">
-  <script defer src="https://saro.website/assets/js/cookie.js"></script>
+    <script defer src="https://saro.website/assets/js/cookie.js"></script>
     <script data-ad-client="ca-pub-5704095251892500" defer
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Welcome to SARO</title>
@@ -73,6 +78,28 @@
                 <h1>ニュース</h1>
                 <br>
                 <article>
+                    <div class="box-news__item">
+                        <div class="box-news">
+                            <h2>Polish halloween 🎃</h2>
+                            <p class="data"> 29.10.2020 | author: <a href="about.html" target="_blank"
+                                    class="author">@Robert</a></p>
+                            <br>
+                            <img src="./../assets/img/embl/dial-grocery.jpg" alt="Dialogue page"
+                                class="image-left__center" />
+                            <p lang="pl">
+                                Cześć! <br>
+                                皆さんお久しぶりです！ <br>
+                                コロナウイルスの影響がだいぶ長引いていますが、皆さんいかがお過ごしでしょうか？<br>
+                                SAROでは新しくコンテンツを追加しました◎ <br> <br>
+
+                                ・<a href="./lessons.html">レッスン</a>: 形容詞と名詞の文法的な性別について <br>
+                                ・<a href="./stuff/dialogue.html">会話文</a>: スーパーマーケットにて <br>
+                                ・<a href="./stuff/traditions.html">文化</a>: 諸聖人の祝日について　<br> <br>
+
+                                近日中に新しいレッスンも追加予定です！お楽しみに<br>
+                            </p>
+                        </div>
+                    </div>
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
