--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1112,18 +1112,12 @@
                 </table>
                 <p>
                   注意：名詞のあとに形容詞が付くフレーズもあります。 <br>
-                  <span lang="pl"><ruby>duże państwo, potężne państwo → państwo polskie<rp>(</rp>
-                      <rt>ドジェ　パンスツフォ　ポテンジネ　パンスツフォ　パンスツフォ　ポルスキエ</rt>
-                      <rp>)</rp>
-                    </ruby></span> <br>
-                  <ruby>czarny kot, pogodny kot → kot domowy<rp>(</rp>
-                    <rt>チャルニ　コト　ポゴヂニ　コト　コト　ドモウィ</rt>
-                    <rp>)</rp>
-                  </ruby></span> <br>
-                  <ruby>wieloletnia wojna, druga wojna →　wojna domowa<rp>(</rp>
-                    <rt>ウィエロレツニャ　ヲイナ　ドルガ　ヲイナ　ヲイナ　ドモワ　</rt>
-                    <rp>)</rp>
-                  </ruby></span></span>
+                  <span lang="pl"><ruby>duże państwo<rp>(</rp>
+                    <rt>ドジェ　パンスツフォ</rt><rp>)</rp></ruby>, <ruby>potężne państwo<rp>(</rp><rt>ポテンジネ　パンスツフォ</rt><rp>)</rp>
+                  </ruby> → <ruby>państwo polskie<rp>(</rp><rt>パンスツフォ　ポルスキエ</rt><rp>)</rp></ruby></span> <br>
+                  <ruby>czarny kot<rp>(</rp><rt>チャルニ　コト</rt><rp>)</rp></ruby>, <ruby>pogodny kot<rp>(</rp><rt>ポゴヂニ　コト　</rt><rp>)</rp></ruby> → <ruby>kot domowy<rp>(</rp>
+                    <rt>コト　ドモウィ</rt><rp>)</rp></ruby> <br>
+                  <ruby>wieloletnia wojna<rp>(</rp><rt>ウィエロレツニャ　ヲイナ</rt><rp>)</rp></ruby>, <ruby>druga wojna<rp>(</rp></ruby>
                 </p>
                 <div class="sign">
                   <p class="sign--person">作成者:</p>
